Align three divs. Make coin fixed in center of page. Changed buttons colors.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6678,7 +6678,7 @@ th.hide-for-touch {
   position: fixed;
   height: 2rem;
   bottom: 0;
-  background-color: white; }
+  background-color: #333; }
   /* line 7, ../sass/mystyles/_footer.scss */
   .footer ul {
     display: block;
@@ -6693,13 +6693,10 @@ th.hide-for-touch {
       padding: 0 1rem 2rem 0; }
 
 /* line 1, ../sass/mystyles/_body.scss */
-.pennies {
-  margin: 4rem 0; }
-  /* line 3, ../sass/mystyles/_body.scss */
-  .pennies h3 {
-    margin-left: 4rem; }
+* {
+  font-family: Satelllite; }
 
-/* line 7, ../sass/mystyles/_body.scss */
+/* line 4, ../sass/mystyles/_body.scss */
 body {
   background-image: url("../images/background.png");
   background-repeat: repeat-y;
@@ -6707,19 +6704,48 @@ body {
   background-position: cover;
   font-family: Satelllite; }
 
-/* line 14, ../sass/mystyles/_body.scss */
+/* line 11, ../sass/mystyles/_body.scss */
 .container {
   padding-top: 5em;
   padding-bottom: 2em; }
 
-/* line 18, ../sass/mystyles/_body.scss */
-* {
-  font-family: Satelllite; }
+/* line 15, ../sass/mystyles/_body.scss */
+.vol-div {
+  margin-left: -3em;
+  width: 27em; }
+
+/* line 19, ../sass/mystyles/_body.scss */
+.coin-img {
+  position: fixed;
+  top: 46%;
+  left: 46%; }
+
+/* line 24, ../sass/mystyles/_body.scss */
+.org-div {
+  width: 30em;
+  margin-right: -6em; }
+
+/* line 28, ../sass/mystyles/_body.scss */
+.pennies {
+  margin: 4rem 0; }
+  /* line 30, ../sass/mystyles/_body.scss */
+  .pennies h3 {
+    margin-left: 4rem; }
 
 /* line 2, ../sass/mystyles/_buttons.scss */
 .penny_profile {
   margin: 0 auto;
   width: 100%; }
+
+/* line 6, ../sass/mystyles/_buttons.scss */
+.button {
+  background: #F7CA10;
+  color: #333; }
+
+/* line 10, ../sass/mystyles/_buttons.scss */
+.button:hover, .button:focus {
+  background: #F5AB35;
+  color: #333; }
 
 /* line 1, ../sass/mystyles/_pricingtable.scss */
 .pricing-table-container {
@@ -6728,20 +6754,21 @@ body {
 
 /* line 1, ../sass/mystyles/_forms.scss */
 form {
-  width: 30rem; }
+  width: 100%; }
 
 /* line 4, ../sass/mystyles/_forms.scss */
+fieldset legend {
+  background: none; }
+
+/* line 7, ../sass/mystyles/_forms.scss */
 .fa-facebook-square {
   color: red; }
 
 /* line 1, ../sass/mystyles/_body.scss */
-.pennies {
-  margin: 4rem 0; }
-  /* line 3, ../sass/mystyles/_body.scss */
-  .pennies h3 {
-    margin-left: 4rem; }
+* {
+  font-family: Satelllite; }
 
-/* line 7, ../sass/mystyles/_body.scss */
+/* line 4, ../sass/mystyles/_body.scss */
 body {
   background-image: url("../images/background.png");
   background-repeat: repeat-y;
@@ -6749,14 +6776,33 @@ body {
   background-position: cover;
   font-family: Satelllite; }
 
-/* line 14, ../sass/mystyles/_body.scss */
+/* line 11, ../sass/mystyles/_body.scss */
 .container {
   padding-top: 5em;
   padding-bottom: 2em; }
 
-/* line 18, ../sass/mystyles/_body.scss */
-* {
-  font-family: Satelllite; }
+/* line 15, ../sass/mystyles/_body.scss */
+.vol-div {
+  margin-left: -3em;
+  width: 27em; }
+
+/* line 19, ../sass/mystyles/_body.scss */
+.coin-img {
+  position: fixed;
+  top: 46%;
+  left: 46%; }
+
+/* line 24, ../sass/mystyles/_body.scss */
+.org-div {
+  width: 30em;
+  margin-right: -6em; }
+
+/* line 28, ../sass/mystyles/_body.scss */
+.pennies {
+  margin: 4rem 0; }
+  /* line 30, ../sass/mystyles/_body.scss */
+  .pennies h3 {
+    margin-left: 4rem; }
 
 /*!
  *  Font Awesome 4.1.0 by @davegandy - http://fontawesome.io - @fontawesome
