--- a/public/sass/mystyles/_buttons.scss
+++ b/public/sass/mystyles/_buttons.scss
@@ -3,5 +3,11 @@
   margin: 0 auto;
   width: 100%;
 }
-
-
+.button{
+  background: #F7CA10;
+  color: #333;
+}
+.button:hover, .button:focus{
+  background: #F5AB35;
+  color: #333;
+}
