--- a/public/sass/mystyles/_footer.scss
+++ b/public/sass/mystyles/_footer.scss
@@ -3,7 +3,7 @@
   position: fixed;
   height: 2rem;
   bottom: 0;
-  background-color: white;
+  background-color: #333;
   ul {
     display: block;
     width: 50%;
