--- a/public/sass/mystyles/_forms.scss
+++ b/public/sass/mystyles/_forms.scss
@@ -1,5 +1,8 @@
 form {
-  width: 30rem;
+  width: 100%;
+}
+fieldset legend{
+  background: none;
 }
 .fa-facebook-square{
   color: red;
