--- a/public/sass/mystyles/_variables.scss
+++ b/public/sass/mystyles/_variables.scss
@@ -2,5 +2,5 @@ $dark-purple: #8E44AD;
 $light-purple: #BF55EC;
 $dark-blue: #1E8BC3;
 $light-blue: #22A7F0;
-$dark-coin: #F9BF3B;
+$dark-coin: #F5AB35;
 $light-coin: #F7CA10;
